prince/res/css/latex.css
/* ... */
caption {
  background-color: rgb(250,240,240);
  margin-top: 3pt;
  margin-bottom: 3pt;
}

table {
  margin: 0px 5px;
  border-collapse: collapse;
  display: inline-table;
}

table[display="true"] {
  display: table;
}

table:focus {
  border-collapse: separate;
}

caption bodyText {
  margin: 0;
  padding: 0;
  text-indent: 0;
}

/*table {
  border-collapse: collapse;
  border-style: solid;
  border-color: #BBBBBB;
  border-width: thin;
}*/

td {
  border: 0.9px solid #BBBBBB;
}

/*td[lines="none"] {
  border-style: none;
}*/

td[lines="solid"] {
  border: thin solid;
}

td[lines="double"] {
  border: medium double black;
}

/*td[line-left="none"] {
  border-left-style: none;
}
*/
td[line-left="solid"] {
  border-left: thin solid black;
}

td[line-left="double"] {
  border-left: medium double black;
}


/*td[line-right="none"] {
  border-right-style: none;
}
*/
td[line-right="solid"] {
  border-right: thin solid black;
}

td[line-right="double"] {
  border-right: medium double black;
}


/*td[line-top="none"] {
  border-top-style: none;
}*/

td[line-top="solid"] {
  border-top: thin solid black;
}

td[line-top="double"] {
  border-top: medium double black;
}


/*td[line-bottom="none"] {
  border-bottom-style: none;
}*/

td[line-bottom="solid"] {
  border-bottom: thin solid black;
}

td[line-bottom="double"] {
  border-bottom: medium double black;
}

button[class="msi"]::-moz-selection{
  background: blue;
} 

button[class="msi"]{
  position: relative;
  left: 0px;
  bottom: 0.1em;
}


hspace {
/*  -moz-binding: url("chrome://prince/content/bindings/latex.xml#hspace"); */
  display: inline-block;
}

hspace * {
  visibility: hidden;
}

body {
   line-height: 1.3em; 
}

body[showinvis="true"] hspace {
  visibility: visible;
  color: green;
  border-bottom: thin solid;
}

body[showinvis="true"] hspace[type="noIndent"]:before {
  border-bottom-style: none;
  content: "☒";
}

body[showinvis="true"] hspace[type="noIndent"] {
  position: relative;
  left: -2.5em;
  width: 0;
  border-bottom-style: none;
}

hspace[type="emSpace"] {
  min-width: 1em;
}

hspace[type="twoEmSpace"] {
  min-width: 2em;
}

hspace[type="thinSpace"] {
  min-width: 0.17em;
}

hspace[type="thickSpace"] {
  min-width: 0.5em;
}

hspace[type="italicCorrectionSpace"] {
  min-width: 0.083em;
}

hspace[type="requiredSpace"] {
  min-width: 0.5em;
  /*display: inline;*/
}

hspace[type="nonBreakingSpace"] {
  display: inline;
  white-space: nowrap;
}

mml|maligngroup:before {
  visibility: hidden;
}

body[showinvis="true"] mml|maligngroup:before {
  content: ".";
  visibility: visible;
  color: green;
}

/*mml|mtd > mml|maligngroup:first-child:before {
  visibility: none;
}
*/

hspace[type="negativeThinSpace"] {
  min-width: 0.17em;
}

hspace[type="zeroSpace"] {
  min-width: 0.17em;
}

hspace[type="noIndent"] {
  min-width: 0.0em;
} 

vspace {
/*  -moz-binding: url("chrome://prince/content/bindings/latex.xml#vspace"); */
  display: inline-block;
	max-width: 2px;
/*  overflow: hidden;  */
  max-width: 1px;
  white-space: pre;
/*  position: relative;  */
}

vspace[type="smallSkip"] {
  height: 3pt;
	vertical-align: -3pt;
}

vspace[type="mediumSkip"] {
  height: 6pt;
	vertical-align: -6pt;
}

vspace[type="bigSkip"] {
  height: 12pt;
	vertical-align: -12pt;
}

vpsace[type="strut"] {
  line-height: 100%;
}

vspace[type="mathStrut"] {
  line-height: 100%;
}

vspace[type="customSpace"] {
  vertical-align: -100%;
}


*[showinvis="true"] vspace {
  border-left: thin solid green;
}

msirule {
/*  -moz-binding: url("chrome://prince/content/bindings/latex.xml#msirule"); */
  display: inline-block;
}

msibr[type="customNewLine"]
{
	display: block;
	width: 2px;
}

msibr[type="customNewLine"]:after {
  white-space: pre;
  content: "\A";
  -moz-user-select: -moz-none;
}

*[showinvis="true"] msibr {
	width: 2px;
}

*[showinvis="true"] msibr[type="customNewLine"] {
	background-color: green;
}

msibr[type="newPage"]:after {
  white-space: pre;
  content: "\A";
  -moz-user-select: -moz-none;
}

phantom {
  color: transparent;
}

inserted, math inserted {
  color: blue;
  text-decoration: underline;
}

deleted {
  color: red;
  text-decoration: line-through;
}

environment {
  display: block;
  font-style: italic;
}

environment:before {
  content:  attr(type)  ;
  -moz-user-select: -moz-none;
}

centeredEnv, centered {
  text-align: center;
  -moz-user-select: text;
}

newPageRule {
	display: inline-block;
	position: absolute;
	left: 0;
	bottom: auto;
	height: 1px;
	width: 100%;
	border-bottom: 2px dashed green;
}

/* invis {
  display: none;
}

*[showinvis="true"] sw|invis {
  display: inline;
}  */

otfont {
  -moz-binding: url("chrome://prince/content/bindings/latex.xml#otfont");
}

fontsize {
  -moz-binding: url("chrome://prince/content/bindings/latex.xml#fontsize");
}

fontcolor {
  -moz-binding: url("chrome://prince/content/bindings/latex.xml#fontcolor");
}

sectiontitle {
  line-height: 1.2em;
}

/* paragraph indenting rule -- indent all paragraphs except as in the next rules */
bodyText,
bodyMath,
rtlBodyText,
p {
  text-indent: 1.5em;
  margin-bottom: 0;
  line-height: 1.3em;
}

/* ... but don't indent the following paragraphs */
sectiontitle + bodyText,
sectiontitle + bodyMath,
sectiontitle + rtlBodyText,
sectiontitle + p {
  text-indent: 0;
}


td bodyText {
  text-indent: 0
}

img {
  -moz-force-broken-image-icon: 1;
  min-height: 6px; min-width: 6px;
}


/*graph {
  -moz-binding: url("chrome://prince/content/bindings/latex.xml#graph");
}*/

/*graph {
  display:block;
  cursor: pointer;
}*/

plotwrapper {
  display: block;
	top: 0;
	left: 0;
  text-indent: 0pt;
  text-align: center;
  -moz-user-select: all;
  -moz-user-focus: normal;
  cursor: pointer;
}

/*plotcaption {
  display: block;
  text-align: center;
  -moz-box-flex: 1;
  min-height: 20px;
}*/

/*object {
}
*/


mml|mi [msimathname="true"] {color: gray; }



mml|mi[tempinput="true"]::before
{
  content: "[";
  color: green;
}
/* ... */

